# conf_protobuf

./: .gitattributes  .gitignore  LICENSE  README.md
proto/: readme.txt
proto/2/: status.proto
proto/3/: status.proto
proto/v2/: Status2.proto
proto/v3/: AllFieldsMessage.proto  Status3.proto  Trash.proto  status3.proto
src/cpp/: CMakeLists.txt  Utils.cpp  Utils.h  main.cpp
src/cpp/proto/: CMakeLists.txt  proto_sources.cmake
src/cpp/proto/2/: status.pb.cc  status.pb.h
src/cpp/proto/3/: status.pb.cc  status.pb.h
src/cpp/proto/v2/: status2.pb.cc  status2.pb.h
src/cpp/proto/v3/: AllFieldsMessage.pb.cc  AllFieldsMessage.pb.h  Trash.pb.cc  Trash.pb.h  status3.pb.cc  status3.pb.h
src/cpp/proto/v3/big_bin/: BigBinV1.pb.cc  BigBinV1.pb.h  BigBinV2.pb.cc  BigBinV2.pb.h  BigBinV3.pb.cc  BigBinV3.pb.h
src/cpp/proto/v3/big_message/: BigMessage.pb.cc  BigMessage.pb.h
src/cpp/proto/v3/diff/: TestMessage.pb.cc  TestMessage.pb.h  Transaction.pb.cc  Transaction.pb.h  UniversalDiff.pb.cc  UniversalDiff.pb.h
src/cpp/proto/v3/diff/Intrusive/: IntrusiveDiff.pb.cc  IntrusiveDiff.pb.h  TestMessageIntrusive.pb.cc  TestMessageIntrusive.pb.h
src/cpp/proto/v3/diff/Universal/: TestMessage.pb.cc  TestMessage.pb.h  Transaction.pb.cc  Transaction.pb.h  UniversalDiff.pb.cc  UniversalDiff.pb.h
src/cpp/tests/: BigBinTests.cpp  BigBinTests.h  BigMessageTests.cpp  CMakeLists.txt  DiffTests.cpp  TrashTests.cpp  UnitTestsCore.cpp  UnitTestsCore.h  UniversalDiffTests.cpp
src/cpp/tests/core/: UnitTestsCore.cpp  UnitTestsCore.h
src/py/: requirements.txt
tools/scripts/: env.py  (+3 more)
(+33 files in other folders)
